--- a/static/embed_code.html
+++ b/static/embed_code.html
@@ -1,10 +1,10 @@
 <!-- WheelPro Site Embed Code - Simple iFrame -->
-<iframe src="https://onyxforged.herokuapp.com" width="100%" height="600px" style="border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"></iframe>
+<iframe src="https://onyx.webplex.tech" width="100%" height="600px" style="border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"></iframe>
 
 <!-- WheelPro Site Embed Code - Responsive iFrame -->
 <!-- 
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;">
-  <iframe src="https://onyxforged.herokuapp.com" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"></iframe>
+  <iframe src="https://onyx.webplex.tech" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"></iframe>
 </div>
 -->
 
@@ -21,7 +21,7 @@
       <img src="https://images.unsplash.com/photo-1609096334421-5b4b9fdccce6?w=150&h=150&fit=crop&crop=center" alt="Carbon Fiber Wheel" style="width: 30%; border-radius: 4px;">
       <img src="https://images.unsplash.com/photo-1503736334956-4c8f8e92946d?w=150&h=150&fit=crop&crop=center" alt="Luxury Wheel" style="width: 30%; border-radius: 4px;">
     </div>
-    <a href="https://onyxforged.herokuapp.com" target="_blank" style="display: inline-block; background-color: #2c5282; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px;">View All Products</a>
+    <a href="https://onyx.webplex.tech" target="_blank" style="display: inline-block; background-color: #2c5282; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px;">View All Products</a>
   </div>
 </div>
 -->
