--- a/static/embed_options.html
+++ b/static/embed_options.html
@@ -71,13 +71,13 @@
         
         <div class="embed-container">
             <div class="code-block">
-                &lt;iframe src="https://onyxforged.herokuapp.com" width="100%" height="600px" style="border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"&gt;&lt;/iframe&gt;
+                &lt;iframe src="https://onyx.webplex.tech" width="100%" height="600px" style="border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"&gt;&lt;/iframe&gt;
             </div>
             <button class="copy-btn" onclick="copyToClipboard('iframe-code')">Copy Code</button>
             
             <h3>Preview:</h3>
             <div class="preview">
-                <iframe src="https://onyxforged.herokuapp.com" width="100%" height="600px" style="border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"></iframe>
+                <iframe src="https://onyx.webplex.tech" width="100%" height="600px" style="border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"></iframe>
             </div>
         </div>
     </div>
@@ -89,7 +89,7 @@
         <div class="embed-container">
             <div class="code-block">
                 &lt;div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%;"&gt;<br>
-                &nbsp;&nbsp;&lt;iframe src="https://onyxforged.herokuapp.com" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"&gt;&lt;/iframe&gt;<br>
+                &nbsp;&nbsp;&lt;iframe src="https://onyx.webplex.tech" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 1px solid #ddd; border-radius: 4px;" title="WheelPro - Premium Forged Wheels"&gt;&lt;/iframe&gt;<br>
                 &lt;/div&gt;
             </div>
             <button class="copy-btn" onclick="copyToClipboard('responsive-iframe-code')">Copy Code</button>
@@ -113,7 +113,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="https://images.unsplash.com/photo-1609096334421-5b4b9fdccce6?w=150&h=150&fit=crop&crop=center" alt="Carbon Fiber Wheel" style="width: 30%; border-radius: 4px;"&gt;<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;img src="https://images.unsplash.com/photo-1503736334956-4c8f8e92946d?w=150&h=150&fit=crop&crop=center" alt="Luxury Wheel" style="width: 30%; border-radius: 4px;"&gt;<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&lt;a href="https://onyxforged.herokuapp.com" target="_blank" style="display: inline-block; background-color: #2c5282; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px;"&gt;View All Products&lt;/a&gt;<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&lt;a href="https://onyx.webplex.tech" target="_blank" style="display: inline-block; background-color: #2c5282; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px;"&gt;View All Products&lt;/a&gt;<br>
                 &nbsp;&nbsp;&lt;/div&gt;<br>
                 &lt;/div&gt;
             </div>
@@ -154,7 +154,7 @@
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&lt;div style="text-align: center; margin-top: 15px;"&gt;<br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;a href="https://onyxforged.herokuapp.com" target="_blank" style="display: inline-block; background-color: #1a365d; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px;"&gt;Explore All Wheels&lt;/a&gt;<br>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;a href="https://onyx.webplex.tech" target="_blank" style="display: inline-block; background-color: #1a365d; color: white; padding: 10px 20px; text-decoration: none; border-radius: 4px;"&gt;Explore All Wheels&lt;/a&gt;<br>
                 &nbsp;&nbsp;&nbsp;&nbsp;&lt;/div&gt;<br>
                 &nbsp;&nbsp;&lt;/div&gt;<br>
                 &lt;/div&gt;<br>
