--- a/static/wheel_badge.html
+++ b/static/wheel_badge.html
@@ -1,5 +1,5 @@
 <!-- WheelPro Badge - SVG Version -->
-<a href="https://onyxforged.herokuapp.com" target="_blank" title="WheelPro - Premium Forged Wheels">
+<a href="https://onyx.webplex.tech" target="_blank" title="WheelPro - Premium Forged Wheels">
   <svg width="180" height="50" viewBox="0 0 180 50" xmlns="http://www.w3.org/2000/svg">
     <rect width="180" height="50" rx="6" fill="#1a365d"/>
     <circle cx="30" cy="25" r="15" fill="none" stroke="white" stroke-width="2"/>
@@ -19,14 +19,14 @@
 
 <!-- WheelPro Badge - Image Version -->
 <!-- 
-<a href="https://onyxforged.herokuapp.com" target="_blank">
-  <img src="https://onyxforged.herokuapp.com/static/images/wheelrpo-badge.png" alt="WheelPro - Premium Forged Wheels" width="180" height="50" style="border: none;">
+<a href="https://onyx.webplex.tech" target="_blank">
+  <img src="https://onyx.webplex.tech/static/images/wheelrpo-badge.png" alt="WheelPro - Premium Forged Wheels" width="180" height="50" style="border: none;">
 </a>
 -->
 
 <!-- WheelPro Badge - HTML/CSS Version -->
 <!-- 
-<a href="https://onyxforged.herokuapp.com" target="_blank" style="display: inline-block; width: 180px; height: 50px; background-color: #1a365d; color: white; text-decoration: none; border-radius: 6px; text-align: center; font-family: Arial, sans-serif; line-height: 1.2; padding: 0; overflow: hidden;">
+<a href="https://onyx.webplex.tech" target="_blank" style="display: inline-block; width: 180px; height: 50px; background-color: #1a365d; color: white; text-decoration: none; border-radius: 6px; text-align: center; font-family: Arial, sans-serif; line-height: 1.2; padding: 0; overflow: hidden;">
   <div style="display: flex; align-items: center; height: 100%;">
     <div style="width: 50px; display: flex; justify-content: center; align-items: center; padding-left: 5px;">
       <div style="width: 30px; height: 30px; border-radius: 50%; border: 2px solid white; position: relative;">
